fixed overflow space?

--- a/landing_page.css
+++ b/landing_page.css
@@ -2,7 +2,7 @@
     font-family: "inter-variable", sans-serif;
 }
 
-body {
+html, body {
     margin: 0;
     font-family: "inter-variable", sans-serif;
     width: 100%;
